[package]
name = "stream_stash_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.115"
log = "0.4.21"
env_logger = "0.11.3"
rocket = { version = "0.5.0", features = ["secrets"] }
rocket_cors = "0.6.0"
